--- a/todo.html
+++ b/todo.html
@@ -11,7 +11,7 @@
    <div id="parent">
     <h3 style="color: white;">To do list App</h3>
     <input type="text" id="take" placeholder="enter here"><button onclick="Add()">Add</button>
-    
+    <h1>Author-Laxmidhar Sahu</h1>
    </div>
  <script src="todo.js"></script>
 </body>
